rootmode and path broadcast